<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_secondary"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/listHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.32"
            android:text="@string/prices_name"
            android:textColor="@color/color_text_light" />

        <TextView
            android:id="@+id/size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:text="@string/prices_size"
            android:textColor="@color/color_text_light"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:text="@string/prices_price"
            android:textColor="@color/color_text_light"/>

        <TextView
            android:id="@+id/updated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.24"
            android:text="@string/prices_updated"
            android:textColor="@color/color_text_light"/>

        <com.ardeapps.menomesta.views.IconView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/edit_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.12"
            android:background="@drawable/selector"
            android:padding="10dp"
            android:text="@string/icon_edit"
            app:iconFont="@string/icon_solid"
            app:iconSize="18sp" />
    </LinearLayout>
</LinearLayout>