<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/curve_shape"
    android:padding="10dp">
    <TextView
        android:text="@string/add_city"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_light"/>
    <TextView
        android:text="@string/submit_city_desc"
        android:id="@+id/info_text"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:textSize="16sp"
        android:textColor="@color/color_text_light"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/cityName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:layout_below="@+id/info_text"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:maxLength="50"
        android:textColor="@color/color_text_light_secondary"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/cityName"
        android:layout_marginTop="20dp" >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:background="@drawable/custom_button"
            android:textColor="@color/color_text_light" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/add"
            android:id="@+id/btn_add"
            android:background="@drawable/custom_button"
            android:textColor="@color/color_text_light"/>
    </RelativeLayout>
</RelativeLayout>