<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <include
        android:id="@+id/menu_back"
        layout="@layout/menu_back" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menu_back"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/add_bar_desc"
        android:textColor="@color/color_text_light"
        android:textSize="14sp" />
    <LinearLayout
        android:id="@+id/nameContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:background="@color/color_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/name"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="textCapSentences"
            android:textColor="@color/color_text_light_secondary" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/cityContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameContent"
        android:layout_marginTop="5dp"
        android:background="@color/color_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="15dp"
        android:weightSum="1">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/city"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/citySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:textColor="@color/color_text_light_secondary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/addressContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityContent"
        android:layout_marginTop="5dp"
        android:background="@color/color_secondary"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/address"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:inputType="textCapSentences"
            android:textColor="@color/color_text_light_secondary"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/typeContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressContent"
        android:layout_marginTop="5dp"
        android:background="@color/color_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/type"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />
        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:orientation="vertical" >
            <RadioButton
                android:id="@+id/radioPub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bar_pub"
                android:textColor="@color/color_text_light_secondary"/>
            <RadioButton
                android:id="@+id/radioNightclub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nightclub"
                android:textColor="@color/color_text_light_secondary"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/foodContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeContent"
        android:layout_marginTop="5dp"
        android:background="@color/color_secondary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_details_food"
            android:textColor="@color/color_text_light"
            android:textSize="16sp"
            android:textStyle="bold" />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <CheckBox
            android:id="@+id/food_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <Button
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/color_button"
        android:text="@string/submit"
        android:textColor="@color/color_text_light" />
</RelativeLayout>