<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:background="@drawable/curve_shape"
    android:padding="20dp">
    <TextView
        android:text="@string/prices_add"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/color_text_light"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/title"
        android:id="@+id/name">
        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_light" />
        <EditText
            android:id="@+id/nameText"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:focusable="true"
            android:maxLength="150"
            android:textColor="@color/color_text_light_secondary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/name"
        android:id="@+id/size">
        <TextView
            android:text="@string/prices_size"
            android:id="@+id/sizeTitle"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_light" />
        <EditText
            android:id="@+id/sizeText"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:maxLength="150"
            android:textColor="@color/color_text_light_secondary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/size"
        android:id="@+id/price">
        <TextView
            android:text="@string/prices_price"
            android:id="@+id/priceTitle"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_light" />
        <EditText
            android:id="@+id/priceText"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:focusable="true"
            android:maxLength="150"
            android:textColor="@color/color_text_light_secondary"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/price">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btn_cancel"
            android:background="@drawable/custom_button"
            android:textColor="@color/color_text_light" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/ready"
            android:id="@+id/btn_ready"
            android:background="@drawable/custom_button"
            android:textColor="@color/color_text_light"/>
    </RelativeLayout>
</RelativeLayout>